@@ -74,8 +74,6 @@ DEFINES = @DEFS@ @DEFINES@
 DOTEXE = @DOTEXE@
 INSTALL = @INSTALL@
 BASH = @BASH@
-BIBTEX2HTML=@BIBTEX2HTML@
-BIBTEX2HTML_FLAGS=@BIBTEX2HTML_FLAGS@
 BISON = @BISON@
 FIND = @FIND@
 FLEX = @FLEX@
@@ -97,6 +95,5 @@ MFTRACE = @MFTRACE@
 PYTHON = @PYTHON@
 SHELL = @SHELL@
 TAR = @TAR@
-TBL = @TBL@
-TROFF = @TROFF@
+YACC = @YACC@
 ZIP = @ZIP@
